--- a/src/main/resources/static/frontend/src/App.css
+++ b/src/main/resources/static/frontend/src/App.css
@@ -1,7 +1,10 @@
-/* App.css */
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f9;
+  background-color: #87CEEB;
   margin: 0;
   padding: 0;
   display: flex;
@@ -18,6 +21,11 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 600px;
   width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: auto;
 }
 
 h1 {
